--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,4 @@
-body {
-    background-image:https://media.gowallpaper.co.uk/media/catalog/product/s/k/sk_filson_paisley_motif_white_wallpaper_-_de41852.jpg(background-image);
+html{
+    background:url(https://nucleus-production.s3.amazonaws.com/uploads/gVlEpJUPJS75N4VKOjeNErOpbi1mJiloVLX1KvDe.jpeg)
 }
+
