adjusted the nav width. Added the teal color to one of the sections. Linked google fonts to the head and found the matching font. all done in portfolio.html. will be copied later to the other 2 files.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,3 +2,12 @@ html{
     background:url(https://nucleus-production.s3.amazonaws.com/uploads/gVlEpJUPJS75N4VKOjeNErOpbi1mJiloVLX1KvDe.jpeg)
 }
 
+.navbar{
+padding:1.5rem 1rem;
+}
+
+.navbar-brand{
+    background:#4aaaa5;
+    font-family: 'Abril Fatface', cursive;
+
+}
