--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,40 +1,54 @@
-body{
-    background:url(https://nucleus-production.s3.amazonaws.com/uploads/gVlEpJUPJS75N4VKOjeNErOpbi1mJiloVLX1KvDe.jpeg)
+body {
+  background: url(https://files.slack.com/files-pri/T018RA60CNP-F01B1RFE933/ignasi_pattern_s.png);
 }
 
-.navbar{
-    padding: .75rem 2rem;
+.navbar {
+  padding: 0.75rem 2rem;
 }
 
-.navbar-brand{
-    background:#4aaaa5;
-    padding:1px;
-    font-family: 'Abril Fatface', cursive;
-    font-size: 25px;
+.navbar-brand {
+  background: #4aaaa5;
+  padding: 1px;
+  font-family: "Abril Fatface", cursive;
+  font-size: 25px;
 }
 
-.nav-item{
-font-size: 16px;
+.nav-item {
+  font-size: 16px;
 }
 
 .navbar-light .navbar-brand {
-    color: rgba(255, 255, 255, 0.9);
+  color: rgba(255, 255, 255, 0.9);
 }
 
-.navbar-light .navbar-nav .active>, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link {
-    color: rgb(255, 255, 255);
+.navbar-light .navbar-nav .active >,
+.navbar-light .navbar-nav .nav-link.active,
+.navbar-light .navbar-nav .nav-link.show,
+.navbar-light .navbar-nav .show > .nav-link {
+  color: rgb(255, 255, 255);
 }
 
-.col-sm-9{
-    height: 720px;
-    padding:25px;
-    font-size: 30px;
-    background-color:rgb(255, 255, 255);
-    font-family: 'Abril Fatface', cursive;
-    color:#4aaaa5;
-    font-weight: 100;
+.col-sm-9 {
+  height: 720px;
+  padding: 25px;
+  font-size: 30px;
+  background-color: rgb(255, 255, 255);
+  font-family: "Abril Fatface", cursive;
+  color: #4aaaa5;
+  font-weight: 100;
 }
 
 .solid {
-    border-top: 2px solid rgb(214, 214, 214);
+  border-top: 2px solid rgb(214, 214, 214);
+}
+
+ p {
+  color: rgb(124, 124, 124);
+  font-family: 'Roboto', sans-serif;
+  text-align: center;
+}
+
+.col-sm-6{
+    height: 200px;
+    background-color: rgb(194, 194, 194);
 }
