--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -61,3 +61,55 @@ body {
     margin: 20px;
    }
 
+   label{
+    color: rgb(79, 79, 79);
+    font-family: 'Roboto', sans-serif;
+    font-size:23px;
+   }
+
+   ::placeholder{
+    color: rgb(160, 160, 160);
+    font-family: 'Roboto', sans-serif;
+    font-size:23px;
+   }
+
+   .btn-primary{
+       background-color:#4aaaa5;
+       border-color:#4aaaa5;
+       font-family: 'Roboto', sans-serif;
+   }
+
+   .btn-group-lg>.btn, .btn-lg {
+    padding: 1.5rem 3rem;
+    font-size: 1.25rem;
+    line-height: 1.5;
+    border-radius: 0rem;
+}
+
+.btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active, .show>.btn-primary.dropdown-toggle {
+    color: #fff;
+    background-color: #4aaaa5;
+    border-color: #4aaaa5;
+}
+
+.btn-primary:hover {
+    color: #fff;
+    background-color: #4aaaa5;
+    border-color: #4aaaa5;
+}
+
+.form-control {
+    display: block;
+    width: 100%;
+    height: calc(2.5em + .75rem + 2px);
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 2.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
