--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -129,6 +129,13 @@ footer{
     margin-top: auto;
     text-align: center;
     padding: 20px;
-    background-color: gray;
-    color:rgb(167, 167, 167);
+    background-color: rgb(82, 80, 80);
+    color:rgb(83, 110, 119);
+}
+
+.greenbar{
+  margin-top: auto;
+  background-color:#4aaaa5;
+  padding:3px;
+  width: 100%;
 }
