--- a/assets/css/indexsheet.css
+++ b/assets/css/indexsheet.css
@@ -1,5 +1,12 @@
+html{
+  height:100%;
+}
+
 body {
     background: url(https://files.slack.com/files-pri/T018RA60CNP-F01B1RFE933/ignasi_pattern_s.png);
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;  
   }
   
   .navbar {
@@ -66,3 +73,24 @@ body {
   font-size: 20px;
   padding-top: 9px;
   color: rgb(32, 32, 32);
+}
+
+.container{
+  min-height: calc(100vh - 211px- 64px);
+}
+
+footer{
+  margin-top: auto;
+  text-align: center;
+  padding: 20px;
+  background-color: rgb(82, 80, 80);
+  color:rgb(83, 110, 119);
+}
+
+.greenbar{
+margin-top: auto;
+background-color:#4aaaa5;
+padding:3px;
+width: 100%;
+margin-bottom: -67px;
+}
