--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,12 +2,11 @@ html{
   height: 100%;
 }
 
-
 body {
     background: url(https://files.slack.com/files-pri/T018RA60CNP-F01B1RFE933/ignasi_pattern_s.png);
     min-height: 100%;
     display: flex;
-    flex-direction: column
+    flex-direction: column;
 }
 
 .navbar {
@@ -91,8 +90,6 @@ body {
     margin-top: 20px;
   }
 
-
-
   @media screen and (min-width: 400px) {
       img {
         height: 120px;
@@ -124,3 +121,4 @@ body {
         width: 200px;
         margin-left: 87px;
       }
+    }
