--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -59,13 +59,10 @@ body {
     height: 200px;
     background-color: rgb(194, 194, 194);
 }
-  footer{
-    margin-top: auto;
-    text-align: center;
-    padding: 20px;
-    background-color: rgb(82, 80, 80);
-    color:rgb(83, 110, 119);
-  }
+/* #page-container{
+  position: relative;
+  min-height: 100vh;
+} */
 
   img{
     height: 200px;
@@ -79,6 +76,16 @@ body {
 
   .img3{
     margin-top: 20px;
+  }
+  #footer{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    text-align: center;
+    width: 100%;
+    padding: 20px;
+    background-color: rgb(82, 80, 80);
+    color:rgb(83, 110, 119);
   }
 
   @media screen and (min-width: 400px) {
