--- a/assets/css/indexsheet.css
+++ b/assets/css/indexsheet.css
@@ -17,7 +17,7 @@ body {
     background: #4aaaa5;
     padding: 1px;
     font-family: "Abril Fatface", cursive;
-    font-size: 25px;
+    font-size: .30rem;
   }
   
   .nav-item {
