--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,7 +15,7 @@ body {
 
 .navbar-brand {
   background: #4aaaa5;
-  padding: 1px;
+  padding: .30rem;
   font-family: "Abril Fatface", cursive;
   font-size: 25px;
 }
